# pto

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  model.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.md  reference.md
src/pto/: __init__.py  __main__.py  cli.py  holidays.py  optimizer.py
tests/: test_cli.py  test_optimizer.py
web/: app.js  index.html  style.css
