[tool.poetry]
name = "pto"
version = "0.1.0"
description = ""
authors = ["Samuel Letellier-Duchesne <samuelduchesne@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.7.2"
glpk = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
