[tool.poetry]
name = "pto"
version = "0.1.0"
description = "PTO vacation optimizer that maximizes time off by bridging weekends and holidays"
authors = ["Samuel Letellier-Duchesne <samuelduchesne@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
