[project]
name = "pto"
version = "0.1.0"
description = "PTO vacation optimizer that maximizes time off by bridging weekends and holidays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["typer>=0.9"]
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuelduchesne@me.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.scripts]
pto = "pto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pto"]

# -- uv -----------------------------------------------------------------------

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=6", "ruff>=0.9", "pyright>=1.1", "mkdocs-material>=9", "mkdocstrings[python]>=0.27"]

# -- ruff ----------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pto"]

# -- pyright -------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src"]

# -- pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# -- coverage ------------------------------------------------------------------

[tool.coverage.run]
source = ["pto"]

[tool.coverage.report]
show_missing = true
skip_empty = true
